examples/test/testpolicy12670.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12670
  namespace: namespace489
spec:
  podSelector:
    matchLabels:
      key14: value17
      key44: value29
      key39: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key24: value9
      podSelector:
        matchLabels:
          key15: value9
